// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the VisualizeChart component 1`] = `
<div>
  <div
    class="grid-row width-desktop"
  >
    <div
      class="grid-col-5"
    >
      <div
        class="border-base-lighter border-1px shadow-3 z-500 radius-md padding-2 bg-white position-sticky "
      >
        <div
          class="usa-form-group"
        >
          <label
            class="usa-label text-bold"
            for="title"
          >
            Chart title
            <span>
              *
            </span>
          </label>
          <div
            class="usa-hint"
          >
            Give your chart a descriptive title.
          </div>
          <input
            class="usa-input"
            id="title"
            name="title"
            type="text"
            value=""
          />
        </div>
        <div
          class="usa-checkbox"
        >
          <input
            checked=""
            class="usa-checkbox__input"
            id="display-title"
            name="showTitle"
            type="checkbox"
          />
          <label
            class="usa-checkbox__label"
            for="display-title"
          >
            Show title on dashboard
          </label>
        </div>
        <div
          class="usa-form-group"
        >
          <fieldset
            class="usa-fieldset"
          >
            <legend
              class="usa-sr-only"
            >
              Chart type (optional)
            </legend>
            <span
              class="usa-label text-bold"
            >
              Chart type (optional)
            </span>
            <div
              class="usa-hint"
            >
              Choose a chart type.
            </div>
            <div
              class="margin-top-2"
            >
              <div
                class="usa-radio"
              >
                <input
                  checked=""
                  class="usa-radio__input"
                  id="LineChart"
                  name="chartType"
                  type="radio"
                  value="LineChart"
                />
                <label
                  class="usa-radio__label"
                  for="LineChart"
                >
                  Line
                </label>
              </div>
              <div
                class="usa-radio"
              >
                <input
                  class="usa-radio__input"
                  id="BarChart"
                  name="chartType"
                  type="radio"
                  value="BarChart"
                />
                <label
                  class="usa-radio__label"
                  for="BarChart"
                >
                  Bar
                </label>
              </div>
              <div
                class="usa-radio"
              >
                <input
                  class="usa-radio__input"
                  id="ColumnChart"
                  name="chartType"
                  type="radio"
                  value="ColumnChart"
                />
                <label
                  class="usa-radio__label"
                  for="ColumnChart"
                >
                  Column
                </label>
              </div>
              <div
                class="usa-radio"
              >
                <input
                  class="usa-radio__input"
                  id="PartWholeChart"
                  name="chartType"
                  type="radio"
                  value="PartWholeChart"
                />
                <label
                  class="usa-radio__label"
                  for="PartWholeChart"
                >
                  Part-to-whole
                </label>
              </div>
              <div
                class="usa-radio"
              >
                <input
                  class="usa-radio__input"
                  id="PieChart"
                  name="chartType"
                  type="radio"
                  value="PieChart"
                />
                <label
                  class="usa-radio__label"
                  for="PieChart"
                >
                  Pie
                </label>
              </div>
              <div
                class="usa-radio"
              >
                <input
                  class="usa-radio__input"
                  id="DonutChart"
                  name="chartType"
                  type="radio"
                  value="DonutChart"
                />
                <label
                  class="usa-radio__label"
                  for="DonutChart"
                >
                  Donut
                </label>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          class="margin-top-3"
        >
          <div
            class="usa-form-group"
          >
            <label
              class="usa-label text-bold"
              for="sortData"
            >
              Sort data (optional)
            </label>
            <div
              class="usa-hint"
              id="event-date-start-hint"
            />
            <select
              class="usa-select"
              id="sortData"
              name="sortData"
            >
              <option
                selected=""
                value=""
              >
                Select an option
              </option>
              <option
                value="1###asc"
              >
                "1" A-Z
              </option>
              <option
                value="1###desc"
              >
                "1" Z-A
              </option>
              <option
                value="2###asc"
              >
                "2" A-Z
              </option>
              <option
                value="2###desc"
              >
                "2" Z-A
              </option>
              <option
                value="3###asc"
              >
                "3" A-Z
              </option>
              <option
                value="3###desc"
              >
                "3" Z-A
              </option>
            </select>
          </div>
        </div>
        <div>
          <label
            class="usa-label text-bold"
          >
            Chart Options (optional)
          </label>
          <div
            class="usa-hint"
          >
            Format your chart
          </div>
          <div
            class="usa-checkbox"
          >
            <input
              class="usa-checkbox__input"
              id="significantDigitLabels"
              name="significantDigitLabels"
              type="checkbox"
            />
            <label
              class="usa-checkbox__label"
              for="significantDigitLabels"
            >
              Significant digit labels (123K, 1.2M)
            </label>
          </div>
          <div
            class="usa-checkbox"
            hidden=""
          >
            <input
              class="usa-checkbox__input"
              id="stackedChart"
              name="stackedChart"
              type="checkbox"
            />
            <label
              class="usa-checkbox__label"
              for="stackedChart"
            >
              Display as stacked chart
            </label>
          </div>
          <div
            class="usa-checkbox"
            hidden=""
          >
            <input
              class="usa-checkbox__input"
              id="dataLabels"
              name="dataLabels"
              type="checkbox"
            />
            <label
              class="usa-checkbox__label"
              for="dataLabels"
            >
              Show data labels
            </label>
          </div>
          <div
            class="usa-checkbox"
            hidden=""
          >
            <input
              class="usa-checkbox__input"
              id="computePercentages"
              name="computePercentages"
              type="checkbox"
            />
            <label
              class="usa-checkbox__label"
              for="computePercentages"
            >
              Display computed percentages
            </label>
          </div>
          <div
            class="usa-checkbox"
            hidden=""
          >
            <input
              checked=""
              class="usa-checkbox__input"
              id="showTotal"
              name="showTotal"
              type="checkbox"
            />
            <label
              class="usa-checkbox__label"
              for="showTotal"
            >
              Show total in chart's center
            </label>
          </div>
          <div
            class="usa-checkbox"
            hidden=""
          >
            <input
              checked=""
              class="usa-checkbox__input"
              id="horizontalScroll"
              name="horizontalScroll"
              type="checkbox"
            />
            <label
              class="usa-checkbox__label"
              for="horizontalScroll"
            >
              Display with horizontal scroll
            </label>
          </div>
        </div>
        <div
          class="usa-form-group"
        >
          <label
            class="usa-label text-bold"
            for="summary"
          >
            Chart summary (optional)
          </label>
          <div
            class="usa-hint"
          >
            Give your chart a summary to explain it in more depth. It can also be read by screen readers to describe the chart for those with visual impairments. This field supports markdown.
             
            <a
              aria-label=""
              class="usa-link action-link"
              href="/admin/markdown"
              target="_blank"
            >
              <span>
                View Markdown Syntax
              </span>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-external-link-alt fa-w-16 fa-xs margin-left-05"
                data-icon="external-link-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                  fill="currentColor"
                />
              </svg>
            </a>
          </div>
          <textarea
            class="usa-textarea"
            id="summary"
            name="summary"
            rows="5"
            style="height: auto;"
          />
        </div>
        <div
          class="usa-checkbox"
        >
          <input
            class="usa-checkbox__input"
            id="summary-below"
            name="summaryBelow"
            type="checkbox"
          />
          <label
            class="usa-checkbox__label"
            for="summary-below"
          >
            Show summary below chart
          </label>
        </div>
        <br />
        <br />
        <hr />
        <button
          class="usa-button usa-button--outline"
          type="button"
        >
          Back
        </button>
        <button
          class="usa-button usa-button--base"
          type="submit"
        >
          Add chart
        </button>
        <button
          class="usa-button usa-button--unstyled text-base-dark hover:text-base-darker active:text-base-darkest"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
    <div
      class="grid-col-7"
    >
      <div
        class="margin-left-4 sticky-preview"
      >
        <button
          class="usa-button usa-button--base"
        >
          Full preview
        </button>
        
        <div
          class="overflow-x-hidden overflow-y-hidden"
        >
          <h3
            class="margin-bottom-1"
          >
            title
          </h3>
          <div
            class="Markdown usa-prose margin-top-0 margin-bottom-4 chartSummaryAbove textOrSummary"
          >
            <p>
              summary
            </p>
          </div>
          <div
            class="recharts-responsive-container"
            id="title"
            style="width: 100%; height: 300px;"
          />
          <div>
            <div
              class="text-right margin-right-05"
            >
              <button
                aria-controls="menu--1"
                aria-haspopup="true"
                class="usa-button usa-button--unstyled text-base"
                data-reach-menu-button=""
                id="menu-button--menu--1"
                type="button"
              >
                Actions
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-down fa-w-10 margin-left-1"
                  data-icon="caret-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the VisualizeChart component without horizontal scrolling 1`] = `
<div>
  <div
    class="grid-row width-desktop"
  >
    <div
      class="grid-col-5"
    >
      <div
        class="border-base-lighter border-1px shadow-3 z-500 radius-md padding-2 bg-white position-sticky "
      >
        <div
          class="usa-form-group"
        >
          <label
            class="usa-label text-bold"
            for="title"
          >
            Chart title
            <span>
              *
            </span>
          </label>
          <div
            class="usa-hint"
          >
            Give your chart a descriptive title.
          </div>
          <input
            class="usa-input"
            id="title"
            name="title"
            type="text"
            value=""
          />
        </div>
        <div
          class="usa-checkbox"
        >
          <input
            checked=""
            class="usa-checkbox__input"
            id="display-title"
            name="showTitle"
            type="checkbox"
          />
          <label
            class="usa-checkbox__label"
            for="display-title"
          >
            Show title on dashboard
          </label>
        </div>
        <div
          class="usa-form-group"
        >
          <fieldset
            class="usa-fieldset"
          >
            <legend
              class="usa-sr-only"
            >
              Chart type (optional)
            </legend>
            <span
              class="usa-label text-bold"
            >
              Chart type (optional)
            </span>
            <div
              class="usa-hint"
            >
              Choose a chart type.
            </div>
            <div
              class="margin-top-2"
            >
              <div
                class="usa-radio"
              >
                <input
                  checked=""
                  class="usa-radio__input"
                  id="LineChart"
                  name="chartType"
                  type="radio"
                  value="LineChart"
                />
                <label
                  class="usa-radio__label"
                  for="LineChart"
                >
                  Line
                </label>
              </div>
              <div
                class="usa-radio"
              >
                <input
                  class="usa-radio__input"
                  id="BarChart"
                  name="chartType"
                  type="radio"
                  value="BarChart"
                />
                <label
                  class="usa-radio__label"
                  for="BarChart"
                >
                  Bar
                </label>
              </div>
              <div
                class="usa-radio"
              >
                <input
                  class="usa-radio__input"
                  id="ColumnChart"
                  name="chartType"
                  type="radio"
                  value="ColumnChart"
                />
                <label
                  class="usa-radio__label"
                  for="ColumnChart"
                >
                  Column
                </label>
              </div>
              <div
                class="usa-radio"
              >
                <input
                  class="usa-radio__input"
                  id="PartWholeChart"
                  name="chartType"
                  type="radio"
                  value="PartWholeChart"
                />
                <label
                  class="usa-radio__label"
                  for="PartWholeChart"
                >
                  Part-to-whole
                </label>
              </div>
              <div
                class="usa-radio"
              >
                <input
                  class="usa-radio__input"
                  id="PieChart"
                  name="chartType"
                  type="radio"
                  value="PieChart"
                />
                <label
                  class="usa-radio__label"
                  for="PieChart"
                >
                  Pie
                </label>
              </div>
              <div
                class="usa-radio"
              >
                <input
                  class="usa-radio__input"
                  id="DonutChart"
                  name="chartType"
                  type="radio"
                  value="DonutChart"
                />
                <label
                  class="usa-radio__label"
                  for="DonutChart"
                >
                  Donut
                </label>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          class="margin-top-3"
        >
          <div
            class="usa-form-group"
          >
            <label
              class="usa-label text-bold"
              for="sortData"
            >
              Sort data (optional)
            </label>
            <div
              class="usa-hint"
              id="event-date-start-hint"
            />
            <select
              class="usa-select"
              id="sortData"
              name="sortData"
            >
              <option
                selected=""
                value=""
              >
                Select an option
              </option>
              <option
                value="1###asc"
              >
                "1" A-Z
              </option>
              <option
                value="1###desc"
              >
                "1" Z-A
              </option>
              <option
                value="2###asc"
              >
                "2" A-Z
              </option>
              <option
                value="2###desc"
              >
                "2" Z-A
              </option>
              <option
                value="3###asc"
              >
                "3" A-Z
              </option>
              <option
                value="3###desc"
              >
                "3" Z-A
              </option>
            </select>
          </div>
        </div>
        <div>
          <label
            class="usa-label text-bold"
          >
            Chart Options (optional)
          </label>
          <div
            class="usa-hint"
          >
            Format your chart
          </div>
          <div
            class="usa-checkbox"
          >
            <input
              class="usa-checkbox__input"
              id="significantDigitLabels"
              name="significantDigitLabels"
              type="checkbox"
            />
            <label
              class="usa-checkbox__label"
              for="significantDigitLabels"
            >
              Significant digit labels (123K, 1.2M)
            </label>
          </div>
          <div
            class="usa-checkbox"
            hidden=""
          >
            <input
              class="usa-checkbox__input"
              id="stackedChart"
              name="stackedChart"
              type="checkbox"
            />
            <label
              class="usa-checkbox__label"
              for="stackedChart"
            >
              Display as stacked chart
            </label>
          </div>
          <div
            class="usa-checkbox"
            hidden=""
          >
            <input
              class="usa-checkbox__input"
              id="dataLabels"
              name="dataLabels"
              type="checkbox"
            />
            <label
              class="usa-checkbox__label"
              for="dataLabels"
            >
              Show data labels
            </label>
          </div>
          <div
            class="usa-checkbox"
            hidden=""
          >
            <input
              class="usa-checkbox__input"
              id="computePercentages"
              name="computePercentages"
              type="checkbox"
            />
            <label
              class="usa-checkbox__label"
              for="computePercentages"
            >
              Display computed percentages
            </label>
          </div>
          <div
            class="usa-checkbox"
            hidden=""
          >
            <input
              checked=""
              class="usa-checkbox__input"
              id="showTotal"
              name="showTotal"
              type="checkbox"
            />
            <label
              class="usa-checkbox__label"
              for="showTotal"
            >
              Show total in chart's center
            </label>
          </div>
          <div
            class="usa-checkbox"
            hidden=""
          >
            <input
              class="usa-checkbox__input"
              id="horizontalScroll"
              name="horizontalScroll"
              type="checkbox"
            />
            <label
              class="usa-checkbox__label"
              for="horizontalScroll"
            >
              Display with horizontal scroll
            </label>
          </div>
        </div>
        <div
          class="usa-form-group"
        >
          <label
            class="usa-label text-bold"
            for="summary"
          >
            Chart summary (optional)
          </label>
          <div
            class="usa-hint"
          >
            Give your chart a summary to explain it in more depth. It can also be read by screen readers to describe the chart for those with visual impairments. This field supports markdown.
             
            <a
              aria-label=""
              class="usa-link action-link"
              href="/admin/markdown"
              target="_blank"
            >
              <span>
                View Markdown Syntax
              </span>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-external-link-alt fa-w-16 fa-xs margin-left-05"
                data-icon="external-link-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                  fill="currentColor"
                />
              </svg>
            </a>
          </div>
          <textarea
            class="usa-textarea"
            id="summary"
            name="summary"
            rows="5"
            style="height: auto;"
          />
        </div>
        <div
          class="usa-checkbox"
        >
          <input
            class="usa-checkbox__input"
            id="summary-below"
            name="summaryBelow"
            type="checkbox"
          />
          <label
            class="usa-checkbox__label"
            for="summary-below"
          >
            Show summary below chart
          </label>
        </div>
        <br />
        <br />
        <hr />
        <button
          class="usa-button usa-button--outline"
          type="button"
        >
          Back
        </button>
        <button
          class="usa-button usa-button--base"
          type="submit"
        >
          Add Chart
        </button>
        <button
          class="usa-button usa-button--unstyled text-base-dark hover:text-base-darker active:text-base-darkest"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
    <div
      class="grid-col-7"
    >
      <div
        class="margin-left-4 sticky-preview"
      >
        <button
          class="usa-button usa-button--base"
        >
          Full preview
        </button>
        
        <div
          class="overflow-x-hidden overflow-y-hidden"
        >
          <h3
            class="margin-bottom-1"
          >
            title
          </h3>
          <div
            class="Markdown usa-prose margin-top-0 margin-bottom-4 chartSummaryAbove textOrSummary"
          >
            <p>
              summary
            </p>
          </div>
          <div
            class="recharts-responsive-container"
            id="title"
            style="width: 100%; height: 300px;"
          />
          <div>
            <div
              class="text-right margin-right-05"
            >
              <button
                aria-controls="menu--7"
                aria-haspopup="true"
                class="usa-button usa-button--unstyled text-base"
                data-reach-menu-button=""
                id="menu-button--menu--7"
                type="button"
              >
                Actions
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-down fa-w-10 margin-left-1"
                  data-icon="caret-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
